Made changes to setup

--- a/setup/index.html
+++ b/setup/index.html
@@ -75,7 +75,7 @@
 <p>I have always been a sucker for good desk setups, and I have wanted one ever since I saw <a href="https://www.youtube.com/watch?v=Ij9njxJUyUQ" target="_blank">MKBHD&#39;s youtube video</a>. While my desk setup is not glamourous, it is functional, and I am happy with its current state. So, here we go!</p>
 <ul>
 <li>
-<p><strong>Laptop</strong>: I use a four-year-old <a href="https://www.amazon.in/MSI-GL63-8RD-450IN-15-6-inch-i7-8750H/dp/B07BQ4K767" target="_blank">MSI GL63</a> laptop running <a href="https://releases.ubuntu.com/20.04/" target="_blank">Ubuntu 20.04 LTS</a> as my personal driver. I bought this with my Dell internship stipend, and it is one of my priced possessions.</p>
+<p><strong>Laptop</strong>: I use an <a href="https://www.apple.com/macbook-air-m1/" target="_blank">Apple MacBook Air</a> running macOS Ventura as my personal driver. I bought this recently for my side gig.</p>
 </li>
 <li>
 <p><strong>Monitor</strong>: I use a <a href="https://www.benq.com/en-in/monitor/stylish/gw2780.html" target="_blank">BenQ 27 Inch FHD</a> display. I bought this during an Amazon sale.</p>
@@ -90,7 +90,7 @@
 <p><strong>Speakers</strong>: I got an <a href="https://www.amazon.in/All-new-Echo-Plus-2nd-built/dp/B0794JD9JS" target="_blank">Amazon Echo Plus</a> for winning a hackathon at Dell. I have been using it for over a year, and honestly, I use it for setting reminders and listening to music.</p>
 </li>
 <li>
-<p><strong>Earphones</strong>: I switch between <a href="https://www.boat-lifestyle.com/products/airdopes-441" target="_blank">boAt Airdopes 441</a> (wireless) and <a href="https://www.boat-lifestyle.com/products/bassheads-100" target="_blank">boAt Bassheads 100</a> (wired).</p>
+<p><strong>Earphones</strong>: I switch between <a href="https://www.boat-lifestyle.com/products/airdopes-441" target="_blank">boAt Airdopes 441</a> (wireless) and <a href="https://www.headphonezone.in/products/kz-zsn-pro-x" target="_blank">KZ ZSN Pro</a> (wired).</p>
 </li>
 <li>
 <p><strong>Table</strong>: I have always wanted a wide table and found this from the Facebook marketplace for a reasonable price.</p>
