--- a/impossible-list/index.html
+++ b/impossible-list/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Impossible List - Dhiraj Balakrishnan</title><meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:url" content="https://dhirajbalakrishnan.dev/impossible-list/">
+	<meta property="og:url" content="http://localhost:1313/impossible-list/">
   <meta property="og:site_name" content="Dhiraj Balakrishnan">
   <meta property="og:title" content="Impossible List">
   <meta property="og:description" content="We all die. The goal isn’t to live forever, the goal is to create something that will.">
@@ -17,22 +17,22 @@
   <meta name="twitter:description" content="We all die. The goal isn’t to live forever, the goal is to create something that will.">
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:200,300" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" media="screen" href="https://dhirajbalakrishnan.dev/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="https://dhirajbalakrishnan.dev/css/main.css" />
-	<link rel="stylesheet" type="text/css" href="https://dhirajbalakrishnan.dev/css/custom.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="http://localhost:1313/css/normalize.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="http://localhost:1313/css/main.css" />
+	<link rel="stylesheet" type="text/css" href="http://localhost:1313/css/custom.css" />
 	
 
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-	<script src="https://dhirajbalakrishnan.dev/js/main.js"></script>
+	<script src="http://localhost:1313/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 
 <body>
 	<div class="container wrapper post">
-		<link rel="stylesheet" href="https://dhirajbalakrishnan.dev/css/custom.css"> 
+		<link rel="stylesheet" href="http://localhost:1313/css/custom.css"> 
 <div class="header">
-	<base href="https://dhirajbalakrishnan.dev/">
-	<h1 class="site-title"><a href="https://dhirajbalakrishnan.dev/">Dhiraj Balakrishnan</a></h1>
+	<base href="http://localhost:1313/">
+	<h1 class="site-title"><a href="http://localhost:1313/">Dhiraj Balakrishnan</a></h1>
 	<div class="site-description"><h2>Software Engineer</h2><nav class="nav social">
 			<ul class="flat"><a href="https://www.linkedin.com/in/djsbalakrishnan/" title="LinkedIn"><i data-feather="linkedin"></i></a><a href="https://github.com/djsbalakrishnan" title="Github"><i data-feather="github"></i></a><a href="https://twitter.com/djsbalakrishnan" title="Twitter"><i data-feather="twitter"></i></a><a href="https://www.youtube.com/@djsbala" title="Youtube"><i data-feather="youtube"></i></a></ul>
 		</nav>
@@ -42,23 +42,23 @@
 		<ul class="flat">
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/posts">Posts</a>
+				<a href="http://localhost:1313/posts">Posts</a>
 			</li>
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/impossible-list">Impossible List</a>
+				<a href="http://localhost:1313/impossible-list">Impossible List</a>
 			</li>
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/newsletter">Newsletter</a>
+				<a href="http://localhost:1313/newsletter">Newsletter</a>
 			</li>
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/setup">Setup</a>
+				<a href="http://localhost:1313/setup">Setup</a>
 			</li>
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/tags">Tags</a>
+				<a href="http://localhost:1313/tags">Tags</a>
 			</li>
 			
 		</ul>
@@ -181,7 +181,7 @@
 		</div></div>
 	<div class="footer wrapper">
 	<nav class="nav">
-		<div> © 2025 - Dhiraj  |  <a href="https://github.com/vividvilla/ezhil">Ezhil theme</a> | Built with <a href="https://gohugo.io">Hugo</a></div>
+		<div> © 2026 - Dhiraj  |  <a href="https://github.com/vividvilla/ezhil">Ezhil theme</a> | Built with <a href="https://gohugo.io">Hugo</a></div>
 	</nav>
 </div>
 
