--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -46,7 +46,11 @@
 			</li>
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/impossible-list">Impossible List</a>
+				<a href="https://dhirajbalakrishnan.dev/impossible-list">Impossible-List</a>
+			</li>
+			
+			<li>
+				<a href="https://dhirajbalakrishnan.dev/memento-mori" target="_blank">Memento-Mori</a>
 			</li>
 			
 			<li>
