Updated Impossible List and removed NewsLetter Tab

--- a/impossible-list/index.html
+++ b/impossible-list/index.html
@@ -54,10 +54,6 @@
 			</li>
 			
 			<li>
-				<a href="https://dhirajbalakrishnan.dev/newsletter">Newsletter</a>
-			</li>
-			
-			<li>
 				<a href="https://dhirajbalakrishnan.dev/setup">Setup</a>
 			</li>
 			
@@ -85,9 +81,7 @@
 <p>Here is mine.</p>
 <h3 id="current-focuses">Current Focuses</h3>
 <ul>
-<li>Learn to cook five dishes</li>
-<li>Post four youtube videos in a month</li>
-<li>Complete 60 days of Meditation</li>
+<li>Complete 30 days of Journal</li>
 </ul>
 <h3 id="life-goals">Life Goals</h3>
 <ul>
@@ -126,7 +120,7 @@
 </li>
 <li><del>Start a YouTube channel on Programming</del> <a href="https://www.youtube.com/channel/UCzysZIoDvN7w_0irA0g7BCw" target="_blank">(July 2022)</a>
 <ul>
-<li>Post four youtube videos in a month</li>
+<li><del>Post four youtube videos in a month</del> <a href="https://www.youtube.com/@djsbala" target="_blank">djsbala</a></li>
 </ul>
 </li>
 <li>Start a company on waste management</li>
@@ -142,7 +136,7 @@
 <li>Complete 100 Days of Code</li>
 <li><del>Complete 30 Days to Minimalism</del> (January 2020)
 <ul>
-<li>Complete Project 16-3. Personalized version of Project 33-3</li>
+<li><del>Complete Project 16-3. Personalized version of Project 33-3</del> (Thanks to WFH)</li>
 </ul>
 </li>
 <li><del>Complete 30 days of Meditation</del> (July 2022)
@@ -150,6 +144,7 @@
 <li>Complete 60 days of Meditation</li>
 </ul>
 </li>
+<li>Complete 30 days of Journal</li>
 </ul>
 <h3 id="creative-goals">Creative Goals</h3>
 <ul>
@@ -161,8 +156,8 @@
 <h3 id="skill-goals">Skill Goals</h3>
 <ul>
 <li>Build / Repair my bike</li>
-<li>Learn Designing and Editing</li>
-<li>Learn to cook five dishes</li>
+<li><del>Learn Designing and Editing</del> (Edited videos for my Youtube Channel)</li>
+<li><del>Learn to cook five dishes</del> (Egg Burji, Paneer Burji, Paneer Butter Masala, Besan Laddoo, Paneer Tikka)</li>
 </ul>
 <h3 id="travel-goals">Travel Goals</h3>
 <ul>
