--- a/impossible-list/index.html
+++ b/impossible-list/index.html
@@ -81,6 +81,8 @@
 <p>Here is mine.</p>
 <h3 id="current-focuses">Current Focuses</h3>
 <ul>
+<li>Reach and maintain 78kg (±3kg) bodyweight.</li>
+<li>Complete the 90-Day dopamine-reset streak.</li>
 <li>Complete 30 days of Journal</li>
 </ul>
 <h3 id="life-goals">Life Goals</h3>
@@ -90,20 +92,19 @@
 </ul>
 <h3 id="fitness-goals">Fitness Goals</h3>
 <ul>
-<li>Quit Sugar for a month</li>
 <li><del>Cycle 100KMs in a day</del> <a href="https://www.instagram.com/p/B5xfhfMAkD3/" target="_blank">(December 2019)</a>
 <ul>
 <li>Cycle 100KMs in a day with duration of each break less than 15 minutes</li>
 </ul>
 </li>
-<li>Complete a Triathlon</li>
-<li>Complete a 10KM marathon</li>
-<li>Finish 25m swim in less than 15 seconds</li>
 <li><del>Get a body score of 90 in MI Scale</del> <a href="https://www.notion.so/djsbalakrishnan/Week-27-51feb56d4914489eacffe53e6d95d60f" target="_blank">(July 2020)</a>
 <ul>
 <li>Get a body score of 90 in MI Scale consecutively for 3 months</li>
 </ul>
 </li>
+<li>Complete a 10KM marathon</li>
+<li>Complete 240 Surya Namaskars in a single month.</li>
+<li>Complete 30 consecutive days of 16:8 Fasting (12:30 PM - 10:00 PM) with ZERO processed snacks.</li>
 </ul>
 <h3 id="professional-goals">Professional Goals</h3>
 <ul>
@@ -123,7 +124,9 @@
 <li><del>Post four youtube videos in a month</del> <a href="https://www.youtube.com/@djsbala" target="_blank">djsbala</a></li>
 </ul>
 </li>
-<li>Start a company on waste management</li>
+<li>Secure / get promoted to a Staff Engineer offer (Remote/US Product).</li>
+<li>Publish 12 Deep-Dive Engineering / System Design Articles in 2026.</li>
+<li>Generate ₹55,000/month in purely passive income.</li>
 </ul>
 <h3 id="habit-goals">Habit Goals</h3>
 <ul>
@@ -132,8 +135,6 @@
 <li>Do a morning workout for 200 days in a row</li>
 </ul>
 </li>
-<li>Read 25 pages a day for 3 months</li>
-<li>Complete 100 Days of Code</li>
 <li><del>Complete 30 Days to Minimalism</del> (January 2020)
 <ul>
 <li><del>Complete Project 16-3. Personalized version of Project 33-3</del> (Thanks to WFH)</li>
@@ -145,19 +146,14 @@
 </ul>
 </li>
 <li>Complete 30 days of Journal</li>
-</ul>
-<h3 id="creative-goals">Creative Goals</h3>
-<ul>
-<li>Play 5 songs flawlessly in Violin</li>
-<li>Learn beatboxing</li>
-<li>Click and edit picture that I can sell in Shutterstock</li>
-<li>Create my own travel blog as a passion project</li>
+<li>Read 25 pages a day for 3 months</li>
 </ul>
 <h3 id="skill-goals">Skill Goals</h3>
 <ul>
 <li>Build / Repair my bike</li>
 <li><del>Learn Designing and Editing</del> (Edited videos for my Youtube Channel)</li>
 <li><del>Learn to cook five dishes</del> (Egg Burji, Paneer Burji, Paneer Butter Masala, Besan Laddoo, Paneer Tikka)</li>
+<li>Teach a complex System Design topic (e.g., Distributed Transactions) to 50+ engineers.</li>
 </ul>
 <h3 id="travel-goals">Travel Goals</h3>
 <ul>
